# XOS

./: .gitignore  CMakeLists.txt  Makefile  Makefile-h  README.md  env.sh  gdbinit  qemu.sh
arch/: Makefile
arch/i386/: Makefile
arch/i386/mm/: init.c
boot/: Makefile  boot.c  grub_head.S  grub_head.s
config/: make.global  submake.global
doc/: OUROS-Makefile配置-20220417.md  OUROS-内存初始化.md  OUROS-显示输出-20220428.md  OUROS-环境搭建-20220416.md  OUROS-系统引导和启动-20220416.md  OUROS-链接脚本-20220418.md
doc/手册/: GDB- Initialized File.md  GNU_C_Extension.md  GNU_GRUB_manual.md  Grub配置选项说明.md  Make和CMake教程.md  OUROS-GNU_Multiboot_manual-20220418.md  简要AT&T语法与8086指令与AS手册.md
include/asm-i386/: atomic.h  bitops.h  boot.h  cache.h  cpufeature.h  current.h  delay.h  desc.h  div64.h  dma.h  e820.h  errno.h  fixmap.h  gdt.h  hardirq.h  hw_irq.h  interrupt.h  io.h  irq.h  msr.h  page.h  param.h  pgtable-2level.h  pgtable.h  posix_types.h  processor.h  ptrace.h  segment.h  semaphore.h  signal.h  smp.h  softirq.h  stdio.h  system.h  timex.h  types.h  vga.h
include/linux/: bootmem.h  cache.h  console.h  ctype.h  debug.h  init.h  interrupt.h  ioport.h  irq.h  irq_cpustat.h  kernel.h  kernel_stat.h  linkage.h  list.h  mm.h  mmzone.h  multiboot.h  sched.h  slab.h  spinlock.h  stdio.h  string.h  threads.h  time.h  timex.h  types.h  wait.h
init/: Makefile  main.c
kernel/: console.c  ksyms.c  panic.c  printk.c  sched.c  softirq.c  timer.c
lib/: ctype.c  debug.c  string.c  vsprintf.c
mm/: bootmem.c  memory.c  numa.c  page_alloc.c  slab.c
script/: kernel.ld
scripts/: kernel.ld  makefil
(+14 files in other folders)
